--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
 .header-style {
     border-bottom: 1px solid black;
+    padding: 1rem;
+}
+
+.footer-style {
+    border-top: 1px solid black;
+}
+
+.boxes {
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 2rem;
+    padding: 2rem;
 }
