--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:100,200,300,400,500,600,700|Lato:100,200,300,400,500,600,700');
+
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Roboto Mono', sans-serif;
+}
+
 .header-style {
     border-bottom: 1px solid black;
     padding: 1rem;
