--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,20 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto Mono', sans-serif;
+    font-size: 1.5rem;
 }
 
 .header-style {
     border-bottom: 1px solid black;
-    padding: 1rem;
+}
+
+.page-headline {
+    padding-left: 1rem;
+}
+
+.faq-box {
+    padding-top: 0.5rem;
+    padding-bottom: 0;
 }
 
 .footer-style {
