--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,10 +11,12 @@ h1, h2, h3, h4, h5, h6 {
 
 .header-style {
     border-bottom: 1px solid black;
+    background-color: #ea632b;
 }
 
 .page-headline {
     padding-left: 1rem;
+    padding-bottom: 1.5rem;
 }
 
 .faq-box {
