--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+section {
+    margin: 0 2rem;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto Mono', sans-serif;
     font-size: 1.5rem;
