added style and strcuture to boxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,11 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 2rem;
 }
 
+.innerbox-button {
+    border-top: 1px solid black;
+    padding-top: 1rem;
+}
+
 button {
     
 }
