changd background color of body, of boxes and of faq-icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: 'Lato', sans-serif;
+    background-color: #7faddb;
 }
 
 section {
@@ -28,6 +29,11 @@ h1, h2, h3, h4, h5, h6 {
     padding-bottom: 0;
 }
 
+.far {
+    background-color: #fff;
+    border-radius: 50%;
+}
+
 .footer-style {
     border-top: 1px solid black;
     background-color: #fff;
@@ -39,6 +45,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 1rem;
     padding: 1rem;
     width: auto;
+    background-color: #fff;
 }
 
 .innerbox-headline {
