--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,10 +15,11 @@ section {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto Mono', sans-serif;
     font-size: 1.5rem;
+    text-transform: uppercase;
 }
 
 .header-style {
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
     background-color: #ea632b;
 }
 
@@ -38,12 +39,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer-style {
-    border-top: 1px solid black;
+    border-top: 2px solid black;
     background-color: #fff;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .boxes {
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 5px;
     margin-bottom: 1rem;
     margin-top: 1rem;
