added style to joke id

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,10 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 8rem;
 }
 
+#joke {
+    text-align: justify;
+}
+
 .recipe-container {
     margin-bottom: 4rem;
 }
