--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
 }
 
+.smaller-font-size {
+    font-size: 14px;
+}
+
 .header-style {
     border-bottom: 2px solid black;
     background-color: #ea632b;
@@ -65,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .two-boxes-row-height {
-    height: 300px;
+    height: 325px;
 }
 
 .innerbox-button {
