changed style of movie block: changed headline, changed in movie modal style; Used template literal for movie modal and deleted unused html in index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,21 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 4rem;
 }
 
+#movie-title {
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 20px;
+}
+
+#movie-image {
+    border-radius: 5px;
+}
+
+.movie-modal-style {
+    text-align: left;
+    
+}
+
 button {
     
 }
