added refreh button icon to joke of the day in index.html and added styling to class refresh-button in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .movie-modal-style {
     text-align: left;
-    
 }
 
 button {
@@ -122,4 +121,11 @@ button {
     color: #fff;
     background-color: #ea632b;
     border-color: #ea632b;
+}
+
+.refresh-button {
+    border: 2px solid black;
+    border-radius: 50%;
+    padding: 0.5rem;
+    background-color: #7faddb;
 }
