--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,3 +129,15 @@ button {
     padding: 0.5rem;
     background-color: #7faddb;
 }
+
+#meal-title {
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+.meal-headline {
+    font-size: 20px;
+}
+}
