--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,10 @@ button {
     font-size: 20px;
 }
 
+.weather-headline {
+    margin-bottom: 1.5rem;
+}
+
 @media only screen and (max-width: 600px) {
 .meal-headline {
     font-size: 20px;
