changed style of joke for mobile and desktop view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #joke {
     text-align: justify;
+    padding-right: 10rem;
+    padding-left: 10rem;
 }
 
 .recipe-container {
@@ -144,4 +146,10 @@ button {
 .meal-headline {
     font-size: 20px;
 }
+
+#joke {
+    text-align: justify;
+    padding: 0;
+}
+
 }
