--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,6 +184,7 @@ img {
     padding: 0.5rem;
     background-color: #7faddb;
     cursor: pointer;
+    font-size: 1rem;
 }
 
 /* Only for screensize < 600px */
@@ -196,5 +197,9 @@ img {
 #joke {
     text-align: justify;
     padding: 0;
+}
+
+.fa-2x {
+    font-size: 1rem;
 }
 }
