--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,9 @@ img {
 }
 
 .page-headline {
-    padding-left: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    text-align: center;
 }
 
 .far {
@@ -95,7 +97,7 @@ img {
 /* Joke block */
 
 .joke-container {
-    margin-top: 2rem;
+    margin-top: 6rem;
 }
 
 /* Weather block */
@@ -187,13 +189,21 @@ img {
     font-size: 20px;
 }
 
-
 #meal-image {
     max-width: 100%;
     height: auto;
 }
 
-.fa-2x {
-    font-size: 1rem;
+.page-headline {
+    font-size: 1.2rem;
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
 }
+
+.faq-button {
+    position: absolute;
+    right: 0;
+    padding-right: 3rem;
+}
+
 }
