--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,11 @@ img {
     margin-top: 6rem;
 }
 
+#joke {
+    overflow-y: hidden;
+    overflow-x: auto;
+}
+
 /* Weather block */
 
 .weather-headline {
